# mtg-commander-deck-builder

./: .gitignore  README.md  demo_legality_check.py  example_usage.py  main.py  pyproject.toml  test_commander_legality.py
.kiro/specs/mtg-commander-deck-builder/: design.md  requirements.md  tasks.md
.kiro/specs/mtg-web-frontend/: requirements.md
mtg_deck_builder/: __init__.py  cli.py  collection_parser.py  config.py  deck_builder.py  edhrec_service.py  models.py  output_manager.py  scryfall_service.py
tests/: __init__.py  test_cli_integration.py  test_collection_parser.py  test_deck_builder.py  test_edhrec_service.py  test_integration_e2e.py  test_models.py  test_output_manager.py
